tests/should_fail/generic_annotation_wrong_type.nv
module main

// SHOULD FAIL: wrong type inside nested generic annotation
struct Wrapper {
    data: None
}

fn unwrap@[T: Type](w: Wrapper) -> T {
    return w.data
}

let w = Wrapper { data: 42 }
// Annotating with String but the value is actually Int
let result: String = unwrap@[String](w)
